--- a/usr.sbin/pkg_add/OpenBSD/Ustar.pod
+++ b/usr.sbin/pkg_add/OpenBSD/Ustar.pod
@@ -1,4 +1,4 @@
-$OpenBSD: Ustar.pod,v 1.1 2020/12/20 15:30:58 daniel Exp $
+$OpenBSD: Ustar.pod,v 1.2 2023/05/16 10:51:36 espie Exp $
 
 =head1 NAME
 
@@ -99,12 +99,20 @@ In case of errors, the archive will call C<$state-E<gt>fatal> with a suitable
 error message that contains the last index name processed. The user may
 set an optional archive description with C<set_description>.
 
-The C<create> method can take an optional C<$callback> argument, which will
-be called regularly while extracting large objects, as C<&$callback($donesize)>,
-with C<$donesize> the number of bytes already extracted.
+The archive object can take a description through C<$arc-E<gt>set_description>
+which will be used in error messages related to archive extraction or creation.
+
+The archive object can be embued with a C<$callback> through 
+C<$arch-E<gt>set_callback>, which will be called regularly while 
+extracting large objects, as C<&$callback($donesize)>,
+with C<$donesize> the number of bytes already extracted, for use in
+progressmeter-style user interactions.
 
 Small files can also be directly extracted to a scalar using
 C<$v = $o-E<gt>contents>.
+
+Actual file objects can also be directly extracted to a temporary file using
+C<$oE<gt>extract_to_fh($fh)>.
 
 Actual writing is performed through C<$o-E<gt>write> and is not mandatory
 either.
