--- a/sbin/ifconfig/ifconfig.8
+++ b/sbin/ifconfig/ifconfig.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ifconfig.8,v 1.395 2023/05/16 14:32:54 jan Exp $
+.\"	$OpenBSD: ifconfig.8,v 1.396 2023/06/01 18:57:53 kn Exp $
 .\"	$NetBSD: ifconfig.8,v 1.11 1996/01/04 21:27:29 pk Exp $
 .\"     $FreeBSD: ifconfig.8,v 1.16 1998/02/01 07:03:29 steve Exp $
 .\"
@@ -31,7 +31,7 @@
 .\"
 .\"     @(#)ifconfig.8	8.4 (Berkeley) 6/1/94
 .\"
-.Dd $Mdocdate: May 16 2023 $
+.Dd $Mdocdate: June 1 2023 $
 .Dt IFCONFIG 8
 .Os
 .Sh NAME
@@ -2316,6 +2316,7 @@ Packets on a VLAN interface without a tag set will use a value of
 .Op Fl wgpeerall
 .Oo
 .Oo Fl Oc Ns Cm wgpeer Ar publickey
+.Op Oo Fl Oc Ns Cm wgdescr Ns Oo Cm iption Oc Ar value
 .Op Cm wgaip Ar allowed-ip_address/prefix
 .Op Cm wgendpoint Ar peer_address port
 .Op Cm wgpka Ar interval
@@ -2383,6 +2384,13 @@ Peer configuration options, which apply to the
 immediately preceding them,
 are as follows:
 .Bl -tag -width Ds
+.Tg wgdescription
+.It Cm wgdescr Ns Oo Cm iption Oc Ar value
+Set the peer's description.
+This can be used to label peers in situations where they may
+otherwise be difficult to distinguish.
+.It Cm -wgdescr Ns Op Cm iption
+Clear the peer description.
 .It Cm wgaip Ar allowed-ip_address/prefix
 Set the peer's IPv4 or IPv6
 .Ar allowed-ip_address
