--- a/sbin/ifconfig/ifconfig.8
+++ b/sbin/ifconfig/ifconfig.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ifconfig.8,v 1.396 2023/06/01 18:57:53 kn Exp $
+.\"	$OpenBSD: ifconfig.8,v 1.397 2023/06/07 18:42:40 bluhm Exp $
 .\"	$NetBSD: ifconfig.8,v 1.11 1996/01/04 21:27:29 pk Exp $
 .\"     $FreeBSD: ifconfig.8,v 1.16 1998/02/01 07:03:29 steve Exp $
 .\"
@@ -31,7 +31,7 @@
 .\"
 .\"     @(#)ifconfig.8	8.4 (Berkeley) 6/1/94
 .\"
-.Dd $Mdocdate: June 1 2023 $
+.Dd $Mdocdate: June 7 2023 $
 .Dt IFCONFIG 8
 .Os
 .Sh NAME
@@ -501,7 +501,7 @@ Query and display information and diagnostics from GBIC and SFP
 modules installed in an interface.
 It is only supported by drivers implementing the necessary functionality
 on hardware which supports it.
-.It Cm tcprecvoffload
+.It Cm tcplro
 Enable TCP large receive offload (LRO) if it's supported by the hardware; see
 .Cm hwfeatures .
 LRO enabled network interfaces modify received TCP/IP packets.
@@ -517,7 +517,7 @@ It is not possible to use LRO with interfaces attached to a
 or
 .Xr tpmr 4 .
 Changing this option will re-initialize the network interface.
-.It Cm -tcprecvoffload
+.It Cm -tcplro
 Disable LRO.
 LRO is disabled by default.
 .It Cm up
