--- a/usr.sbin/btrace/bt.5
+++ b/usr.sbin/btrace/bt.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: bt.5,v 1.15 2023/06/27 14:13:33 claudio Exp $
+.\"	$OpenBSD: bt.5,v 1.16 2023/06/30 13:31:37 jsg Exp $
 .\"
 .\" Copyright (c) 2019 Martin Pieuchot <mpi@openbsd.org>
 .\"
@@ -14,7 +14,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: June 27 2023 $
+.Dd $Mdocdate: June 30 2023 $
 .Dt BT 5
 .Os
 .Sh NAME
@@ -167,7 +167,7 @@ Set all values from
 to 0.
 .El
 .Pp
-The following functions only work on a sepcific map entry.
+The following functions only work on a specific map entry.
 .Bl -tag -width "lhist(value, min, max, step)"
 .It "@map[key]" = Fn count
 Increase the stored value for
