--- a/usr.sbin/pkg_add/pkg_create.1
+++ b/usr.sbin/pkg_add/pkg_create.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: pkg_create.1,v 1.128 2023/01/25 13:25:07 espie Exp $
+.\"	$OpenBSD: pkg_create.1,v 1.129 2023/07/04 14:00:18 espie Exp $
 .\"
 .\" Documentation and design originally from FreeBSD. All the code has
 .\" been rewritten since. We keep the documentation's notice:
@@ -21,7 +21,7 @@
 .\" [jkh] Took John's changes back and made some additional extensions for
 .\" better integration with FreeBSD's new ports collection.
 .\"
-.Dd $Mdocdate: January 25 2023 $
+.Dd $Mdocdate: July 4 2023 $
 .Dt PKG_CREATE 1
 .Os
 .Sh NAME
@@ -161,6 +161,11 @@ If set, disable the
 annotations in the generated package, rely on the normal
 .Xr tar 1
 timestamps instead.
+(Mostly used to create firmware "packages" since
+.Xr fw_update 1
+only handles a very small subset of the
+.Xr package 5
+format.)
 .It Cm USE_GROFF
 Set to 1 to have groff format manpages behind the scenes during
 package creation.
