--- a/share/man/man4/eoip.4
+++ b/share/man/man4/eoip.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: eoip.4,v 1.6 2020/12/05 18:44:35 jmc Exp $
+.\" $OpenBSD: eoip.4,v 1.7 2023/07/26 05:56:48 jmc Exp $
 .\" $NetBSD: gre.4,v 1.10 1999/12/22 14:55:49 kleink Exp $
 .\"
 .\" Copyright 1998 (c) The NetBSD Foundation, Inc.
@@ -28,14 +28,14 @@
 .\" ARISING IN ANY WAY  OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: December 5 2020 $
+.Dd $Mdocdate: July 26 2023 $
 .Dt EOIP 4
 .Os
 .Sh NAME
 .Nm eoip
 .Nd MikroTik Ethernet over IP tunnel network device
 .Sh SYNOPSIS
-.Cd "pseudo-device gre"
+.Cd "pseudo-device eoip"
 .Sh DESCRIPTION
 The
 .Nm
