--- a/usr.bin/ssh/sshd_config.5
+++ b/usr.bin/ssh/sshd_config.5
@@ -33,8 +33,8 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\" $OpenBSD: sshd_config.5,v 1.349 2023/07/27 22:25:17 djm Exp $
-.Dd $Mdocdate: July 27 2023 $
+.\" $OpenBSD: sshd_config.5,v 1.350 2023/07/28 05:42:36 jmc Exp $
+.Dd $Mdocdate: July 28 2023 $
 .Dt SSHD_CONFIG 5
 .Os
 .Sh NAME
@@ -1998,7 +1998,7 @@ which are expanded at runtime:
 .It %%
 A literal
 .Sq % .
-.It %C
+.It \&%C
 Identifies the connection endpoints, containing
 four space-separated values: client address, client port number,
 server address, and server port number.
