--- a/usr.bin/tmux/tmux.1
+++ b/usr.bin/tmux/tmux.1
@@ -1,4 +1,4 @@
-.\" $OpenBSD: tmux.1,v 1.925 2023/08/08 08:08:47 nicm Exp $
+.\" $OpenBSD: tmux.1,v 1.926 2023/08/08 08:21:30 nicm Exp $
 .\"
 .\" Copyright (c) 2007 Nicholas Marriott <nicholas.marriott@gmail.com>
 .\"
@@ -1782,29 +1782,35 @@ Exit copy mode.
 .Xc
 Clear the current selection.
 .It Xo
-.Ic copy-end-of-line [<prefix>]
+.Ic copy-end-of-line
+.Op Ar prefix
 .Xc
 Copy from the cursor position to the end of the line.
 .Ar prefix
 is used to name the new paste buffer.
 .It Xo
-.Ic copy-end-of-line-and-cancel [<prefix>]
+.Ic copy-end-of-line-and-cancel
+.Op Ar prefix
 .Xc
 Copy from the cursor position and exit copy mode.
 .It Xo
-.Ic copy-line [<prefix>]
+.Ic copy-line
+.Op Ar prefix
 .Xc
 Copy the entire line.
 .It Xo
-.Ic copy-line-and-cancel [<prefix>]
+.Ic copy-line-and-cancel
+.Op Ar prefix
 .Xc
 Copy the entire line and exit copy mode.
 .It Xo
-.Ic copy-selection [<prefix>]
+.Ic copy-selection
+.Op Ar prefix
 .Xc
 Copies the current selection.
 .It Xo
-.Ic copy-selection-and-cancel [<prefix>]
+.Ic copy-selection-and-cancel
+.Op Ar prefix
 (vi: Enter)
 (emacs: M-w)
 .Xc
@@ -1840,7 +1846,8 @@ Move the cursor up.
 .Xc
 Move the cursor to the end of the line.
 .It Xo
-.Ic goto-line <line>
+.Ic goto-line
+.Ar line
 (vi: :)
 (emacs: g)
 .Xc
@@ -1864,13 +1871,15 @@ Scroll to the top of the history.
 .Xc
 Repeat the last jump.
 .It Xo
-.Ic jump-backward <to>
+.Ic jump-backward
+.Ar to
 (vi: F)
 (emacs: F)
 .Xc
 Jump backwards to the specified text.
 .It Xo
-.Ic jump-forward <to>
+.Ic jump-forward
+.Ar to
 (vi: f)
 (emacs: f)
 .Xc
@@ -1901,6 +1910,7 @@ Move to the next matching bracket.
 Move to the next paragraph.
 .It Xo
 .Ic next-prompt
+.Op Fl o
 .Xc
 Move to the next prompt.
 .It Xo
@@ -1933,6 +1943,7 @@ Move to the previous matching bracket.
 Move to the previous paragraph.
 .It Xo
 .Ic previous-prompt
+.Op Fl o
 .Xc
 Move to the previous prompt.
 .It Xo
@@ -1960,12 +1971,14 @@ Refresh the content from the pane.
 .Xc
 Repeat the last search.
 .It Xo
-.Ic search-backward <for>
+.Ic search-backward
+.Ar text
 (vi: ?)
 .Xc
 Search backwards for the specified text.
 .It Xo
-.Ic search-forward <for>
+.Ic search-forward
+.Ar text
 (vi: /)
 .Xc
 Search forward for the specified text.
@@ -2033,6 +2046,9 @@ move between shell prompts, but require the shell to emit an escape sequence
 .Nm
 where the prompts are located; if the shell does not do this, these commands
 will do nothing.
+The
+.Fl o
+flag jumps to the beginning of the command output instead of the shell prompt.
 .Pp
 Copy commands may take an optional buffer prefix argument which is used
 to generate the buffer name (the default is
