--- a/lib/libcrypto/man/EVP_EncryptInit.3
+++ b/lib/libcrypto/man/EVP_EncryptInit.3
@@ -1,9 +1,7 @@
-.\" $OpenBSD: EVP_EncryptInit.3,v 1.44 2022/08/31 14:27:34 tb Exp $
+.\" $OpenBSD: EVP_EncryptInit.3,v 1.45 2023/08/15 11:26:49 schwarze Exp $
 .\" full merge up to: OpenSSL 5211e094 Nov 11 14:39:11 2014 -0800
 .\"   EVP_bf_cbc.pod EVP_cast5_cbc.pod EVP_idea_cbc.pod EVP_rc2_cbc.pod
 .\"   7c6d372a Nov 20 13:20:01 2018 +0000
-.\" selective merge up to: OpenSSL 16cfc2c9 Mar 8 22:30:28 2018 +0100
-.\"   EVP_chacha20.pod 8fa4d95e Oct 21 11:59:09 2017 +0900
 .\"
 .\" This file is a derived work.
 .\" The changes are covered by the following Copyright and license:
@@ -71,7 +69,7 @@
 .\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED
 .\" OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: August 31 2022 $
+.Dd $Mdocdate: August 15 2023 $
 .Dt EVP_ENCRYPTINIT 3
 .Os
 .Sh NAME
@@ -149,8 +147,7 @@
 .Nm EVP_cast5_ecb ,
 .Nm EVP_cast5_cfb64 ,
 .Nm EVP_cast5_cfb ,
-.Nm EVP_cast5_ofb ,
-.Nm EVP_chacha20
+.Nm EVP_cast5_ofb
 .Nd EVP cipher routines
 .Sh SYNOPSIS
 .In openssl/evp.h
@@ -1020,11 +1017,6 @@ This is a variable key length cipher.
 is an alias for
 .Fn EVP_cast5_cfb64 ,
 implemented as a macro.
-.It Fn EVP_chacha20
-The ChaCha20 stream cipher.
-The key length is 256 bits.
-The first 32 bits of the 128-bit IV are used as a counter,
-and the remaining 96 bits as a nonce.
 .El
 .Pp
 See also
@@ -1241,6 +1233,7 @@ do_crypt(FILE *in, FILE *out, int do_encrypt)
 .Xr EVP_AEAD_CTX_init 3 ,
 .Xr EVP_aes_128_cbc 3 ,
 .Xr EVP_camellia_128_cbc 3 ,
+.Xr EVP_chacha20 3 ,
 .Xr EVP_des_cbc 3 ,
 .Xr EVP_OpenInit 3 ,
 .Xr EVP_rc4 3 ,
