--- a/share/man/man5/cargo-module.5
+++ b/share/man/man5/cargo-module.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: cargo-module.5,v 1.5 2023/08/17 05:43:09 tb Exp $
+.\"	$OpenBSD: cargo-module.5,v 1.6 2023/08/18 08:20:27 tb Exp $
 .\"
 .\" Copyright (c) 2008 Marc Espie
 .\" Copyright (c) 2017 Daniel Jakots
@@ -25,7 +25,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: August 17 2023 $
+.Dd $Mdocdate: August 18 2023 $
 .Dt CARGO-MODULE 5
 .Os
 .Sh NAME
@@ -106,6 +106,15 @@ Needs to be set for some virtual manifests.
 Name of the local directory for vendoring crates.
 Defaults to
 .Pa ${WRKSRC}/modcargo-crates .
+.It MODCARGO_WANTLIB
+Architecture-specific
+.Ev WANTLIB
+entries required by all Rust code.
+Should be used instead of explicit entries for
+.Dq c ,
+.Dq pthread ,
+and
+.Dq c++abi .
 .El
 .Pp
 This module adds three
