--- a/lib/libcrypto/man/EVP_chacha20.3
+++ b/lib/libcrypto/man/EVP_chacha20.3
@@ -1,4 +1,4 @@
-.\" $OpenBSD: EVP_chacha20.3,v 1.2 2023/08/16 13:47:18 schwarze Exp $
+.\" $OpenBSD: EVP_chacha20.3,v 1.3 2023/08/21 03:26:42 jsg Exp $
 .\" full merge up to: OpenSSL 35fd9953 May 28 14:49:38 2019 +0200
 .\"
 .\" This file is a derived work.
@@ -65,7 +65,7 @@
 .\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED
 .\" OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: August 16 2023 $
+.Dd $Mdocdate: August 21 2023 $
 .Dt EVP_CHACHA20 3
 .Os
 .Sh NAME
@@ -157,7 +157,7 @@ It is strongly recommended to specify
 .Fa arg
 as exactly 16.
 Otherwise, only the initial part of the tag may be compared
-and mismatches near the end of the tag may get silently irgnored.
+and mismatches near the end of the tag may get silently ignored.
 This control operation fails if the
 .Fa ctx
 is configured for encryption or if
@@ -204,7 +204,7 @@ is less than 1 or greater than 16.
 .It Dv EVP_CTRL_INIT
 Set the length of the initialization vector to the default value
 of 12 bytes and clear the Poly1305 internal state.
-The application program usually does not need to invoke this contol
+The application program usually does not need to invoke this control
 operation manually because it is automatically called internally by
 .Xr EVP_EncryptInit_ex 3 ,
 .Xr EVP_DecryptInit_ex 3 ,
